testdata/baselines/reference/submodule/conformance/jsDeclarationsClassStatic.errors.txt
source.js(9,9): error TS2339: Property 'statische' does not exist on type 'typeof Handler'.
source.js(15,1): error TS2741: Property 'Strings' is missing in type 'typeof Handler' but required in type 'typeof import("source")'.


==== source.js (2 errors) ====
    class Handler {
    	static get OPTIONS() {
    		return 1;
    	}
    
    	process() {
    	}
    }
    Handler.statische = function() { }
            ~~~~~~~~~
!!! error TS2339: Property 'statische' does not exist on type 'typeof Handler'.
    const Strings = {
        a: "A",
        b: "B"
    }
    
    module.exports = Handler;
    ~~~~~~~~~~~~~~
!!! error TS2741: Property 'Strings' is missing in type 'typeof Handler' but required in type 'typeof import("source")'.
!!! related TS2728 source.js:16:1: 'Strings' is declared here.
    module.exports.Strings = Strings
    
    /**
     * @typedef {Object} HandlerOptions
     * @property {String} name
     * Should be able to export a type alias at the same time.
     */
    